--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/rdrew/orion#readme",
   "devDependencies": {
-    "blueimp-gallery": "^2.35.0",
     "browser-sync": "^2.18.8",
     "bs-rewrite-rules": "^2.1.2",
     "del": "^2.2.2",
@@ -37,6 +36,7 @@
     "run-sequence": "^1.2.2"
   },
   "dependencies": {
-    "foundation-sites": "^6.3.1"
+    "foundation-sites": "^6.3.1",
+    "guff": "^0.1.6"
   }
 }
